# q3d3d12

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Original-ReadMe.txt  README.md  build.sh
code/: CMakeLists.txt  debug-commandline.txt  deploycontent.bat  deploydx12sdkbits.bat  make-cmake.sh
code/account/: CMakeLists.txt
code/account/null/: null_account.c
code/bgame/: CMakeLists.txt
code/botlib/: CMakeLists.txt  be_aas_bspq3.c  be_aas_cluster.c  be_aas_debug.c  be_aas_entity.c  be_aas_file.c  be_aas_main.c  be_aas_move.c  be_aas_optimize.c  be_aas_reach.c  be_aas_route.c  be_aas_routealt.c  be_aas_sample.c  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ea.c  be_interface.c  be_interface.h  l_crc.c  l_libvar.c  l_log.c  l_memory.c  l_memory.h  l_precomp.c  l_precomp.h  l_script.c  l_struct.c
code/bspc/: be_aas_bspc.c
code/cgame/: CMakeLists.txt  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_info.c  cg_local.h  cg_main.c  cg_marks.c  cg_newdraw.c  cg_public.h  cg_scoreboard.c  cg_syscalls.c  cg_view.c  cg_weapons.c  tr_types.h
code/client/: CMakeLists.txt  cl_cgame.c  cl_cin.c  cl_console.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keys.h  snd_api.c  snd_dma.c  snd_local.h  snd_mem.c  snd_mix.c
code/d3d/: CMakeLists.txt  Direct3DCommon.cpp  Direct3DCommon.h
code/d3d/DirectXTK/: PlatformHelpers.h  dds.h
code/d3d11/: D3D11Core.cpp  D3D11Core.h  D3D11Device.cpp  D3D11Device.h  D3D11Draw.cpp  D3D11DrawData.cpp  D3D11DrawData.h  D3D11Driver.cpp  D3D11Driver.h  D3D11Image.cpp  D3D11Image.h  D3D11Shaders.cpp  D3D11Shaders.h  D3D11State.cpp  D3D11State.h  pch.h
code/d3d11/DirectXTK/: Readme.txt
code/d3d12/: BackBufferState.cpp  BackBufferState.h  BlurPP.cpp  BlurPP.h  CMakeLists.txt  CommandState.cpp  CommandState.h  ConstantBuffer.cpp  ConstantBuffer.h  D3D12Core.cpp  D3D12Core.h  D3D12QAPI.cpp  D3D12QAPI.h  DescriptorBatch.cpp  DescriptorBatch.h  DescriptorHeaps.cpp  DescriptorHeaps.h  Device.cpp  Device.h  DlightBuffers.cpp  DlightBuffers.h  DrawStages.cpp  DrawStages.h  FSQ.cpp  FSQ.h  Fence.cpp  Fence.h  Frame.cpp  Frame.h  GenericDrawStage.cpp  GenericDrawStage.h  GenericDrawStageDepth.cpp  GenericDrawStageDepth.h  GenericDrawStageDlight.cpp  GenericDrawStageDlight.h  GenericDrawStageMT.cpp  GenericDrawStageMT.h  GenericDrawStageST.cpp  GenericDrawStageST.h  GenericDrawStageUnlitST.cpp  (+34 more)
code/d3d12/DirectXTK12/: DDSTextureLoader.cpp  DDSTextureLoader.h  d3dx12.h
code/d3d12/XBO/: EQAAResolve.cpp  EQAAResolve.h
code/game/: CMakeLists.txt  ai_dmq3.c  bg_lib.c  botlib.h  g_arenas.c  g_bot.c  g_cmds.c  g_local.h  g_main.c  g_mem.c  g_public.h  g_spawn.c  g_syscalls.c  g_team.c  g_utils.c  game.def
code/gamethread/: CMakeLists.txt  gt_msgq.cpp  gt_msgq.h  gt_shared.cpp  gt_shared.h
code/hlsl/: blur_cs.hlsl  depth_ps.hlsl  depth_vs.hlsl  fsq_ps.hlsl  fsq_vs.hlsl  genericunlitst_ps.hlsl  pscommon.h  skybox_ps.hlsl  skybox_vs.hlsl  vscommon.h
code/hlsl/4.0_level_9_3/: genericmt_ps.hlsl  (+3 more)
code/hololens/: Package.appxmanifest  holo_app.cpp  holo_input.cpp  holo_net.cpp  holo_sys.cpp  packagelist.txt
code/jpeg-6/: CMakeLists.txt  jerror.c  jload.c  jmemmgr.c  jmemnobs.c
code/q3_ui/: CMakeLists.txt  keycodes.h  ui_atoms.c  ui_confirm.c  ui_connect.c  ui_controls2.c  ui_demo2.c  ui_display.c  ui_gameinfo.c  ui_ingame.c  ui_loadconfig.c  ui_local.h  ui_main.c  ui_menu.c  ui_mfield.c  ui_mods.c  ui_network.c  ui_options.c  ui_playermodel.c  ui_playersettings.c  ui_preferences.c  ui_qmenu.c  ui_servers2.c  ui_setup.c  ui_sound.c  ui_specifyserver.c  ui_splevel.c  ui_sppostgame.c  ui_spreset.c  ui_start.c  ui_startserver.c  ui_teamorders.c  ui_video.c
code/qabi/: CMakeLists.txt  cgame.qabi  common.qabi  engine.cgame.qabi  engine.client.qabi  engine.common.qabi  engine.game.qabi  engine.ui.qabi  game.qabi  ui.qabi
code/qcommon/: CMakeLists.txt  cm_load.c  cm_local.h  cm_patch.c  cm_polylib.c  cmd.c  common.c  cvar.c  files.c  huffman.c  msg.c  net_chan.c  qcommon.h  qfiles.h  vm.c  vm_interpreted.c  vm_local.h
code/qshared/: CMakeLists.txt  q_shared.c  q_shared.h
code/renderer/: CMakeLists.txt  gl_common.c  gl_common.h  gl_driver.c  gl_image.c  gl_shade.c  gl_shadows.c  proxy_main.c  proxy_main.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_dds.cpp  tr_flares.c  tr_font.c  tr_image.c  tr_init.c  tr_layer.c  tr_layer.h  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_public.h  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_sky.c  tr_smp.c  tr_state.c  tr_state.h  tr_surface.c  tr_world.c
code/server/: CMakeLists.txt  server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c
code/splines/: math_vector.cpp  q_parse.cpp  q_shared.cpp  q_shared.h  q_shared.hpp  splines.cpp  util_str.cpp  util_str.h
code/ui/: CMakeLists.txt  keycodes.h  ui.def  ui_atoms.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c
code/uwp/: Package.appxmanifest  Quake3_TemporaryKey.pfx  uwp_app.cpp  uwp_app.h  uwp_common.h  uwp_input.cpp  uwp_msgs.h  uwp_net.cpp  uwp_sys.cpp
code/win/: CMakeLists.txt  win_shared.c  win_shared.h
code/win32/: CMakeLists.txt  readme-debug.txt  win_d3d.cpp  win_d3d.h  win_input.c  win_local.h  win_main.c  win_net.c  win_snd.c  win_snd.h  win_syscon.c  win_wndproc.c
code/win8/: Package.appxmanifest  packagelist.txt  win8_app.cpp  win8_app.h  win8_input.cpp  win8_msgs.h  win8_net.cpp  win8_net.h  win8_sys.cpp
code/winrt/: winrt_d3d.cpp  winrt_d3d.h  winrt_shared.cpp  winrt_shared.h  winrt_utils.cpp  winrt_utils.h  winrt_view.cpp  winrt_view.h
code/xaudio/: CMakeLists.txt  xaudio_local.h  xaudio_main.cpp  xaudio_public.h
code/xbo/: MappingFile.xml  Package.appxmanifest  xbo_app.cpp  xbo_app.h  xbo_buffer.cpp  xbo_buffer.h  xbo_common.h  xbo_input.cpp  xbo_msgs.h  xbo_net.cpp  xbo_storage.cpp  xbo_sys.cpp  xbo_user.cpp  xbo_user.h
code/xinput/: CMakeLists.txt  xinput_main.c  xinput_public.h
(+494 files in other folders)
