add_library(q3_d3d12
    STATIC
    BackBufferState.cpp
    BackBufferState.h
    BlurPP.cpp
    BlurPP.h
    CommandState.cpp
    CommandState.h
    ConstantBuffer.cpp
    ConstantBuffer.h
    D3D12Core.cpp
    D3D12Core.h
    D3D12QAPI.cpp
    D3D12QAPI.h
    DescriptorBatch.cpp
    DescriptorBatch.h
    DescriptorHeaps.cpp
    DescriptorHeaps.h
    Device.cpp
    Device.h
    DirectXTK12/d3dx12.h
    DirectXTK12/DDSTextureLoader.cpp
    DirectXTK12/DDSTextureLoader.h
    DlightBuffers.cpp
    DlightBuffers.h
    DrawStages.cpp
    DrawStages.h
    Fence.cpp
    Fence.h
    Frame.cpp
    Frame.h
    FSQ.cpp
    FSQ.h
    GenericDrawStage.cpp
    GenericDrawStageDepth.cpp
    GenericDrawStageDepth.h
    GenericDrawStageDlight.cpp
    GenericDrawStageDlight.h
    GenericDrawStage.h
    GenericDrawStageMT.cpp
    GenericDrawStageMT.h
    GenericDrawStageST.cpp
    GenericDrawStageST.h
    GenericDrawStageUnlitST.cpp
    GenericDrawStageUnlitST.h
    GenericShaders.cpp
    GenericShaders.h
    GlobalCommandList.cpp
    GlobalCommandList.h
    Image.cpp
    Image.h
    PipelineState.cpp
    PipelineState.h
    PostProcess.cpp
    PostProcess.h
    PSODB.cpp
    PSODB.h
    RenderState.cpp
    RenderState.h
    Resources.cpp
    Resources.h
    RootSignature.cpp
    RootSignature.h
    Shader.cpp
    Shader.h
    SkyBox.cpp
    SkyBox.h
    SwapChain.cpp
    SwapChain.h
    TessBuffers.cpp
    TessBuffers.h
    Upload.cpp
    Upload.h
    UploadRingBuffer.cpp
    UploadRingBuffer.h
    UploadScratch.cpp
    UploadScratch.h
    # XBO/EQAAResolve.cpp
    # XBO/EQAAResolve.h
)
