add_library(
    game
    SHARED
    ai_chat.c
    ai_chat.h
    ai_cmd.c
    ai_cmd.h
    ai_dmnet.c
    ai_dmnet.h
    ai_dmq3.c
    ai_dmq3.h
    ai_main.c
    ai_main.h
    ai_team.c
    ai_team.h
    ai_vcmd.c
    ai_vcmd.h
    be_aas.h
    be_ai_char.h
    be_ai_chat.h
    be_ai_gen.h
    be_ai_goal.h
    be_ai_move.h
    be_ai_weap.h
    be_ea.h
    # bg_lib.c
    bg_lib.h
    bg_local.h
    bg_misc.c
    bg_pmove.c
    bg_public.h
    bg_slidemove.c
    botlib.h
    chars.h
    g_active.c
    g_arenas.c
    g_bot.c
    g_client.c
    g_cmds.c
    g_combat.c
    g_items.c
    g_local.h
    g_main.c
    g_mem.c
    g_misc.c
    g_missile.c
    g_mover.c
    g_public.h
    # g_rankings.c
    g_rankings.h
    g_session.c
    g_spawn.c
    g_svcmds.c
    g_syscalls.c
    g_target.c
    g_team.c
    g_team.h
    g_trigger.c
    g_utils.c
    g_weapon.c
    inv.h
    match.h
    q_math.c
    q_shared.c
    q_shared.h
    surfaceflags.h
    syn.h
)
